--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -38,3 +38,9 @@ jobs:
       run: |
         pip install pytest
         python -m pytest
+    - name: Update documention
+      run: |
+        make github
+        git add 'docs/*'
+        git commit -m "Update documention from GitHub Action"
+        git push
