Git needs identification to commit and upload

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -44,6 +44,6 @@ jobs:
         pip install sphinx
         make github
         cd ..
-        git add 'docs/*'
-        git commit -m "Update documention from GitHub Action"
-        git push
+#        git add 'docs/*'
+#        git commit -m "Update documention from GitHub Action"
+#        git push
