--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,29 @@
 name = proofer
 version = attr: src.VERSION
 description = Proofer
+long_description = file README.md, LICENSE
+keywords =
+    geometry
+    formal
+license = GNU General Public License v3 (GPLv3)
 classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    Intended Audience :: Education
+    Intended Audience :: Science/Research
+    License :: OSI Approved
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
+    Topic :: Education
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Mathematics
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 packages = find:
